# ipcraft-vscode

./: .eslintrc.js  .gitignore  .gitmodules  .prettierignore  .prettierrc.js  .vscodeignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Jenkinsfile  LICENSE  README.md  eslint.config.js  eslint_errors.txt  eslint_errors_unix.txt  eslint_out.json  eslint_temp.txt  eslint_warnings.txt  eslint_warnings2.txt  eslint_warnings3.txt  eslint_warnings4.txt  eslint_warnings5.txt  eslint_warnings7.txt  fix_coalesce.js  index.html  jest.config.js  just_errors.txt  lint_report.json  lint_report2.json  lint_report3.json  lint_report4.json  lint_report5.json  lint_results.txt  mkdocs.yml  package-lock.json  package.json  plan.md  playwright.config.ts  (+7 more)
.agent/rules/: version-control.md
.agents/rules/: architecture.md  coding-standard.md  documentation.md  version-control.md
.agents/workflows/: legacy-vhdl-importer.md  new-ip-foundry.md
.github/instructions/: copilot.instructions.md
.github/prompts/: plan-codeQualityImprovement.prompt.md
.github/workflows/: ci.yml  docs.yml  integration-vendor.yml  publish-cli.yml  vivado-nightly.yml
.husky/: pre-commit
__mocks__/: vscode.ts
architecture/architecture/: index.html
architecture/bit-field-handling/: index.html
architecture/extension-host/: index.html
architecture/generator-backbone/: index.html
architecture/overview/: index.html
architecture/refactoring/: index.html
architecture/technical-debt/: index.html
architecture/vivado-interface-catalog/: index.html
architecture/vsix-packaging/: index.html
architecture/webview/: index.html
blog/building-ipcraft/: index.html
concepts/custom-interface/: index.html
concepts/data-inspector/: index.html
concepts/docs-screenshots/: index.html
concepts/eda-integration-tests/: index.html
concepts/extension-model/: index.html
concepts/foundry-dashboard-ux/: index.html
concepts/generator-backbone/: index.html
concepts/responsive-design/: index.html
concepts/spatial-editing/: index.html
concepts/vivado-interface-catalog/: index.html
concepts/yaml-data-flow/: index.html
config/: jest.config.js  jest.integration.js  playwright.config.ts  playwright.docs.ts  postcss.config.js  tailwind.config.js  webpack.config.js
contributing/guidelines/: index.html
docker/oss-tools/: Dockerfile
docs/: ARCHITECTURE.md  BEGINNERS_GUIDE.md  BIT_FIELD_INTERACTION.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  SPATIAL_INSERTION_IMPLEMENTATION.md  hardware-conformance-test-plan.md  index.html  index.md  responsive-design.md  review.md  testing-master-plan.md  testing.md  width-arith-functions.md
docs/architecture/: architecture.md  bit-field-handling.md  codegen-multi-interface.md  extension-host.md  generator-backbone.md  overview.md  technical-debt.md  vivado-interface-catalog.md  vsix-packaging.md  webview.md
docs/blog/: building-ipcraft.md
docs/concepts/: custom-interface.md  data-inspector-visual-workspace.md  data-inspector.md  docs-screenshots.md  eda-integration-tests.md  extension-model.md  foundry-dashboard-ux.md  generator-backbone.md  responsive-design.md  spatial-editing.md  vivado-interface-catalog.md  yaml-data-flow.md
docs/contributing/: changelog.md  guidelines.md
docs/getting-started/: development.md  quickstart.md
docs/how-to/: ai-design-guide.md  build-vsix.md  building-a-project.md  check-consistency.md  create-your-first-ip-core.md  custom-interfaces.md  customizing-generated-files-with-scaffold-packs.md  data-inspector-capture-examples.md  defining-a-custom-interface.md  generating-a-project.md  importing-an-existing-design.md  port-width-functions.md  run-cocotb-simulation.md  run-eda-integration-tests.md  scaffold-packs.md  use-data-inspector.md  using-arithmetic-functions-in-port-widths.md  vhdl-import.md
docs/next_steps/: implementation_plan.md
docs/plan/: access-column-ux.md  ip_core_architect.md  port_python_features.md  subcore_references.md  template_customization.md
docs/plans/: issue-28-per-file-vhdl-version.md
docs/refactor/: generator-backbone.md  memory_layout_invariants.md  webview-architecture.md
docs/reference/: bitfield-interaction.md  commands.md  generator.md  ip-core-editor.md  keyboard-shortcuts.md  specification-schemas.md  yaml-libraries.md
docs/tutorials/: build-and-verify-a-scaffold-pack.md  de10-nano-case-study.md  headless-quartus-build.md  importing-avalon-mm-peripherals.md  led-controller-avmm-authoring.md  led-controller-avmm-on-hardware.md  led-controller-avmm-simulation.md  memory-mapped-registers.md
examples/: README.md
examples/led_avmm/: led_controller_avmm.ip.yml  led_controller_avmm.mm.yml
examples/regmap_conformance_avmm/: regmap_conformance.ip.yml  regmap_conformance.mm.yml
examples/regmap_conformance_axil/: regmap_conformance_axil.ip.yml  regmap_conformance_axil.mm.yml
getting-started/development/: index.html
getting-started/quickstart/: index.html
how-to/ai-design-guide/: index.html
how-to/build-vsix/: index.html
how-to/building-a-project/: index.html
how-to/check-consistency/: index.html
how-to/create-your-first-ip-core/: index.html
how-to/customizing-generated-files-with-scaffold-packs/: index.html
how-to/defining-a-custom-interface/: index.html
how-to/generating-a-project/: index.html
how-to/importing-an-existing-design/: index.html
how-to/port-width-functions/: index.html
how-to/run-cocotb-simulation/: index.html
schemas/: ip_core.schema.json  memory_map.schema.json
scripts/: check-cli-distribution.js  check-cli-release-version.js  check-markdown-links.js  check-no-fixtures.sh  check-submodule.js  check-vscode-compatibility.js  check-vsix.js  copy-e2e-fixtures.js  fetchFixtures.js  fix_all_coalesce.js  generate-standalone-ip.js  generate-types.js  guard-cli-publish.js  pack-cli.js  prepare-cli-package.js  run-remote-integration.sh  test-cli-package.js  validate-examples-qsys.js
search/: search_index.json
src/: extension.ts
testing/: index.html
testing-master-plan/: index.html
width-arith-functions/: index.html
(+951 files in other folders)
